src/cz/vutbr/web/csskit/parser/CssParser.jjt
/* Options for generated parser */
options {
  JAVA_UNICODE_ESCAPE = false;
  UNICODE_INPUT = true;
  IGNORE_CASE = true;
  STATIC = false;
}


/* API definition */
PARSER_BEGIN(CssParser)

package cz.vutbr.web.csskit.parser;

import org.apache.log4j.Logger;

import java.io.StringReader;
import java.util.List;
import java.util.ArrayList;

import cz.vutbr.web.css.Rule;
import cz.vutbr.web.css.ImportURI;
import cz.vutbr.web.css.StyleSheet;
import cz.vutbr.web.csskit.StyleSheetImpl;
import cz.vutbr.web.csskit.RuleSetImpl;
import cz.vutbr.web.csskit.RuleMediaImpl;
import cz.vutbr.web.csskit.RulePageImpl;
import cz.vutbr.web.csskit.ImportURIImpl;

/**
 * Parser of CSS passed as InputStream, Reader or directly as String.
 * Successful parsing creates StyleSheet  	
 */
@SuppressWarnings("all")
public class CssParser {
	
	private static Logger log = Logger.getLogger(CssParser.class);


	/** Charset of given css */
	private String charset;
	
	/** Rules gathered from input */
	private List<Rule> rules = new ArrayList<Rule>();
	
	/** Files to be imported into stylesheet */
	private List<ImportURI> imports = new ArrayList<ImportURI>();

	/** 
	 * Creates CssParser.
	 * Uses string as input
	 * @param css Input string to be parsed
	 */ 
	public CssParser(String css) {
		this(new StringReader(css));
	}
	
	/**
	 * Error recovery.
	 * Skip to given token in case of error
	 */
	private void errorSkipTo(int kind) {
	
		if(log.isDebugEnabled()) {
			ParseException e = generateParseException();	
			log.debug(e);
		}
	
		Token t;
		do {
			t = getNextToken();
		}while(t.kind!=kind && t.kind!=EOF);
		
	}

}
PARSER_END(CssParser)

// Skip comments
SKIP :
{
  <SLASH_STAR_COMMENT: "/*" (~["*"])* ("*")+ (~["/","*"] (~["*"])* ("*")+)* "/" >
}

// Tokens of lexical analyzer 
TOKEN : 
{
  <#h : ["0"-"9", "a"-"f"]> |
  <#nonascii : ["\200"-"\377"]> |
  <#unicode : "\\" <h> (<h>)? (<h>)? (<h>)? (<h>)? (<h>)? ("\r\n"|[" ", "\t", "\r", "\n", "\f"])? > |
  <#escape : <unicode> | "\\" ~["\r", "\n", "\f", "0"-"9", "a"-"f"]> |
  <#nmstart : ["_", "a"-"z"] | <nonascii> | <escape>> |
  <#nmchar : ["_", "a"-"z", "0"-"9", "-"] | <nonascii> | <escape>> |
  <#string1 : "\"" (~["\n", "\r", "\f", "\""] | "\\" <NL> | <escape>)* "\""> |
  <#string2 : "'" (~["\n", "\r", "\f", "'"] | "\\" <NL> | <escape>)* "'"> |
  <#invalid1 : "\""(~["\n", "\r", "\f", "\""] | "\\" <NL> | <escape>)* > |
  <#invalid2	: "'"(~["\n", "\r", "\f", "'"] | "\\" <NL> | <escape>)* > |

  <#comment : "/*" (~["*"])* ("*")+ (~["/","*"] (~["*"])* ("*")+)* "/" > |
  <#ident : ("-")? <nmstart> (<nmchar>)* > |
  <#name : (<nmchar>)+ > |
  <#num : (["0"-"9"])+ | (["0"-"9"])* "." (["0"-"9"])+ > |
  <#string : <string1>|<string2> > |
  <#invalid : <invalid1>|<invalid2> > |
  <#url : ([";", "!", "#", "$", "%", "&", "*", "-", "~", ".", "/", ":", ",", "=", "?"] | <nmchar> )* > | 
  <#ss : ([" ", "\t", "\r", "\n", "\f"])+ > |
  <#w : (<ss>)? > |

  <#NL : "\n" | "\r\n" | "\r" | "\f"> |

  <#A : "a" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("41" | "61")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? > |
  <#C : "c" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("43" | "63")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? > |
  <#D : "d" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("44" | "64")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? > |
  <#E : "e" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("45" | "65")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? > |
  <#G : "g" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("47" | "67")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\g"> |
  <#H : "h" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("48" | "68")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\h"> |
  <#I : "i" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("49" | "69")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\i"> |
  <#K : "k" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("4b" | "6b")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\k"> |
  <#M : "m" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("4d" | "6d")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\m"> |
  <#N : "n" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("4e" | "6e")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\n"> |
  <#O : "o" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("51" | "71")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\o"> |
  <#P : "p" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("50" | "70")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\p"> |
  <#R : "r" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("52" | "72")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\r"> |
  <#S : "s" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("53" | "73")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\s"> |
  <#T : "t" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("54" | "74")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\t"> |
  <#X : "x" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("58" | "78")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\x"> |
  <#Z : "z" | ("\\0")? ("\\0")? ("\\0")? ("\\0")? ("5a" | "7a")  ("\r\n" | [" ", "\t", "\r", "\n", "\f"]) ? | "\\z"> |

  <BLANK : <ss> > |

  <CDO : "<!--" > |
  <CDC : "-->" > |
  <EQUAL : "=" > |
  <INCLUDES : "~=" > |
  <DASHMATCH : "|=" > |

  <LBRACE : <w> "{" > |
  <PLUS : <w> "+" > |
  <MINUS : <w> "-" > |
  <GREATER : <w> ">" > |
  <COMMA : <w> "," > |
  <STRING : <string> > |
  <INVALID : <invalid> > |
  <IDENT : <ident> > |

  <HASH : "#" <name> > |

  <IMPORT_SYM : "@" <I> <M> <P> <O> <R> <T> > |
  <PAGE_SYM : "@" <P> <A> <G> <E> > |
  <MEDIA_SYM : "@" <M> <E> <D> <I> <A> > |
  <CHARSET_SYM : "@" <C> <H> <A> <R> <S> <E> <T> " "> |

  <IMPORTANT_SYM : "!" (<w>|<comment>)* <I> <M> <P> <O> <R> <T> <A> <N> <T> > |

  <EMS : <num> "em" > |
  <EXS : <num> "ex" > |
  <LENGTHPX : <num> "px" > | 
  <LENGTHCM : <num> "cm" > | 
  <LENGTHMM : <num> "mm" > | 
  <LENGTHPT : <num> "pt" > | 
  <LENGTHPC : <num> "pc" > |
  <ANGLEDEG : <num> "deg" > | 
  <ANGLERAD : <num> "rad" > |
  <ANGLEGRAD : <num> "grad" > |
  <TIMEMS : <num> "ms" > |
  <TIMES : <num> "s" > |
  <FREQHZ : <num> "hz" > |
  <FREQKHZ : <num> "khz" > | 

  <DIMENSION : <num> <ident> > |

  <PERCENTAGE : <num> "%" > |
  <NUMBER : <num> > |

  <URI : ("url(" <w> <string> <w> ")") | ("url("<w> <url> <w> ")") > |
  <FUNCTION : <ident> "(" >
}


/**
 * Parses input and returns gathered information as StyleSheet.
 * @return StyleSheet which contains rules gathered.
 * @see StyleSheet
 */
StyleSheet start() :
{StyleSheet stylesheet = new StyleSheetImpl();}
{
  stylesheet() <EOF>
  { 
  stylesheet.setCharset(charset);
  stylesheet.setImports(imports);
  stylesheet.setRules(rules);
  
  return stylesheet; 
  }
}

void stylesheet() :
{}
{
  ( charset() )?
  (<BLANK> | <CDO> | <CDC>)* ( import_a() (<BLANK> | <CDO> | <CDC> )* )*
  ( ( ruleset() | media() | page() ) (<BLANK> | <CDO> | <CDC>)* )*
  /* Reseni bez Lookahead, bohuzel pomalejsi */
  /*( ( ruleset() | media() | page() ) [<CDO> (<BLANK> | <CDO> | <CDC>)* | <CDC> (<BLANK> | <CDO> | <CDC>)*] )*  */
}

void import_a() :
{}
{ 
  <IMPORT_SYM> (<BLANK>)*
  [string() | uri()] (<BLANK>)* ( medium() (<COMMA> (<BLANK>)* medium())* )? ";" (<BLANK>)*
  
  { imports.add(new ImportURIImpl(jjtThis)); }
}

void media() :
{}
{
  <MEDIA_SYM> (<BLANK>)* medium() ( <COMMA> (<BLANK>)* medium() )* <LBRACE> (<BLANK>)* (ruleset())* "}" (<BLANK>)*
  
  { rules.add(new RuleMediaImpl(jjtThis)); }
}

void medium() :
{}
{
  ident() (<BLANK>)*
}

void page() :
{}
{
  <PAGE_SYM> (<BLANK>)* (pseudo_page())? (<BLANK>)*
    <LBRACE> (<BLANK>)* declaration() ( ";" (<BLANK>)* declaration() )* "}" (<BLANK>)*
    
  { rules.add(new RulePageImpl(jjtThis)); }
}

void pseudo_page() :
{}
{
  ":" ident()
}

void operator() :
{}
{
  ( slash() (<BLANK>)* | comma() (<BLANK>)* )?
}

void combinator() :
{}
{
  plus() (<BLANK>)* | greater() (<BLANK>)* | <BLANK>
}

void unary_operator() :
{}
{
  minus() | plus()
}

void property() :
{}
{
  ident() (<BLANK>)*
}

/**
 * Inserts rule into stylesheet
 * TODO change to be more error-prone
 */
void ruleset() :
{}
{
  selector() ( <COMMA> (<BLANK>)* selector() )*
  <LBRACE> (<BLANK>)* declaration() ( ";" (<BLANK>)* declaration() )* "}" (<BLANK>)*
  
  { rules.add(new RuleSetImpl(jjtThis));}
}

void selector() :
{}
{
  simple_selector() ( combinator() simple_selector() )*
}

void simple_selector() :
{}
{
  element_name() ( hash() | class_a() | attrib() | pseudo() )*
  | ( hash() | class_a() | attrib() | pseudo() )+
}

void class_a() :
{}
{
  "." ident()
}

void element_name() :
{}
{
  ident() | "*"
}

void attrib() :
{}
{
  "[" (<BLANK>)* ident() (<BLANK>)* [ (equal() | includes() | dashmatch() ) (<BLANK>)*
    ( ident() | string() ) (<BLANK>)* ] "]"
}

void pseudo() :
{}
{
  ":" ( ident() | pfunction() )
}

void pfunction() :
{}
{
  function_begin() (<BLANK>)* [ident()] (<BLANK>)* ")"
}

void declaration() :
{}
{
  (property() ":" (<BLANK>)* expr() (prio())?)?
}

void prio() :
{}
{
  <IMPORTANT_SYM> (<BLANK>)*
}

void expr() :
{}
{
  term() ( operator() term() )*
}

void term() :
{}
{
  [ unary_operator() ]
    ( number() (<BLANK>)* | percentage() (<BLANK>)* | lengthpx() (<BLANK>)* | lengthcm() (<BLANK>)* | lengthmm() (<BLANK>)* | 
      lengthpt() (<BLANK>)* | lengthpc() (<BLANK>)* | ems() (<BLANK>)* | exs() (<BLANK>)* | angledeg() (<BLANK>)* | anglerad() (<BLANK>)* | anglegrad() (<BLANK>)* |
      timems() (<BLANK>)* | times() (<BLANK>)* | freqhz() (<BLANK>)* | freqkhz() (<BLANK>)* )
    | string() (<BLANK>)* | ident() (<BLANK>)* | uri() (<BLANK>)* | hexcolor() | function()
}

void function() :
{}
{
  function_begin() (<BLANK>)* expr() ")" (<BLANK>)*
}

void hexcolor() :
{}
{
  hash() (<BLANK>)*
}

/**
 * Internally sets charset of document
 */
void charset() :
{String currentCharset = null;}
{
	try {
  		<CHARSET_SYM> currentCharset = string() ";"
  	}
  	catch (ParseException e) {
  		currentCharset = null;
  		errorSkipTo(NL);
  	}
  	// do not overwrite charset if already set and 
  	// current rule failed to retrieve value
  	finally {
  		if(currentCharset!=null)
  			charset = currentCharset; 
  	}
}

void equal() :      
{} 
{ 
    <EQUAL>
}

void includes() :   
{} 
{
    <INCLUDES>
}

void dashmatch() :  
{} 
{
    <DASHMATCH>
}

void comma() :  
{} 
{
    <COMMA>
}

void slash() :
{}
{
    "/"
}

/* Tokens with specified tokens */
void hash() :       { Token t; } { t=<HASH>        { jjtThis.setImage(t.image); } }
void ident() :      { Token t; } { t=<IDENT>       { jjtThis.setImage(t.image); } }
String string() :   { Token t; } { t=<STRING>      { jjtThis.setImage(t.image); return t.image;} }
void uri() :        { Token t; } { t=<URI>         { jjtThis.setImage(t.image); } }
void number() :     { Token t; } { t=<NUMBER>      { jjtThis.setImage(t.image); } }
void percentage() : { Token t; } { t=<PERCENTAGE>  { jjtThis.setImage(t.image); } }
void lengthpx() :   { Token t; } { t=<LENGTHPX>    { jjtThis.setImage(t.image); } }
void lengthcm() :   { Token t; } { t=<LENGTHCM>    { jjtThis.setImage(t.image); } }
void lengthmm() :   { Token t; } { t=<LENGTHMM>    { jjtThis.setImage(t.image); } }
void lengthpt() :   { Token t; } { t=<LENGTHPT>    { jjtThis.setImage(t.image); } }
void lengthpc() :   { Token t; } { t=<LENGTHPC>    { jjtThis.setImage(t.image); } }
void ems() :        { Token t; } { t=<EMS>         { jjtThis.setImage(t.image); } }
void exs() :        { Token t; } { t=<EXS>         { jjtThis.setImage(t.image); } }
void angledeg() :   { Token t; } { t=<ANGLEDEG>    { jjtThis.setImage(t.image); } }
void anglerad() :   { Token t; } { t=<ANGLERAD>    { jjtThis.setImage(t.image); } }
void anglegrad() :  { Token t; } { t=<ANGLEGRAD>   { jjtThis.setImage(t.image); } }
void timems() :     { Token t; } { t=<TIMEMS>      { jjtThis.setImage(t.image); } }
void times() :      { Token t; } { t=<TIMES>       { jjtThis.setImage(t.image); } }
void freqhz() :     { Token t; } { t=<FREQHZ>      { jjtThis.setImage(t.image); } }
void freqkhz() :    { Token t; } { t=<FREQKHZ>     { jjtThis.setImage(t.image); } }
void plus() :       { Token t; } { t=<PLUS>        { jjtThis.setImage(t.image); } }
void minus() :      { Token t; } { t=<MINUS>       { jjtThis.setImage(t.image); } }
void greater():     { Token t; } { t=<GREATER>     { jjtThis.setImage(t.image); } }
void function_begin() :  { Token t; } { t=<FUNCTION>       { jjtThis.setImage(t.image); } }
